--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,14 @@
 
 <section>
    
-    <div class="row center-align text-color card grey lighten-1">
+
+<div class="index-image">
+
+    <!-- CREADIT TO THE CREATOR OF THE PICTURE
+                                        Becca Tapert 
+                                        kitchen
+                                        https://unsplash.com/photos/mDOGXiuVb4M -->
+    <div class="center-align text-color card grey lighten-1 recipe-index">
     <div class="col s12 center-align">
         <h1 class="header-site">Welcome to Recipe gather</h1>
 </div> 
@@ -13,13 +20,6 @@
         </p>
 </div>
 </div>
-<div class="index-image">
-
-    <!-- CREADIT TO THE CREATOR OF THE PICTURE
-                                        Becca Tapert 
-                                        kitchen
-                                        https://unsplash.com/photos/mDOGXiuVb4M -->
-
 </div>
 
 </section>
