--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@
     padding-left: 2%;
     padding-right: 2%;
 }
+
  /* Text for the recipes */
 .text-color {
     color: #fafafa;
@@ -51,6 +52,7 @@
 /* Images */ 
 
 .index-image{
+    background-color: rgba(0, 0, 0, 0.5);
     background: url(https://images.unsplash.com/photo-1556909211-36987daf7b4d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80) center no-repeat;
     background-size: cover;
     padding-bottom: 600px;
